--- a/styling.css
+++ b/styling.css
@@ -9,6 +9,9 @@ body {
 
 h1 {
     text-align: center;
+    background-color: aliceblue;
+    width: max-content;
+    margin: auto;
 }
 
 #main {
@@ -32,4 +35,13 @@ h1 {
     text-align: center;
     vertical-align: middle;
     cursor: default;
+    
+    
+}
+.controls {
+    text-align: center;
+    background-color: aliceblue;
+    margin: auto;
+    width: max-content;
+    
 }
